--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
